Fix sidebar appearing under navbar in production
Changed sidebar positioning from `top-0 pt-14 h-screen` to `top-14 bottom-0`
to position it directly below the navbar, eliminating any potential overlap
regardless of z-index or CSS specificity issues.

Also removed conflicting legacy CSS rule in navbar.scss that set height: 56px
on .notebook--sidebar, which could override Tailwind's height utilities in
production due to CSS load order.

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -18,12 +18,6 @@
 	}
 }
 
-@media only screen and (min-width: 601px) {
-	.notebook--sidebar, .notebook--sidebar .nav-wrapper i, .notebook--sidebar a.sidenav-trigger, .notebook--sidebar a.sidenav-trigger i {
-	    height: 56px;
-	    line-height: 56px;
-	}
-}
 
 nav.navbar {
   z-index: 10;
